[project]
name = "nhentai-favorites-downloader"
version = "0.1.0"
description = "nhentai favorites downloader"
dependencies = [
		"aiofiles==24.1.0",
		"aiohappyeyeballs==2.6.1",
		"aiohttp==3.12.13",
		"aiosignal==1.3.2",
		"attrs==25.3.0",
		"audioop-lts==0.2.1",
		"certifi==2025.6.15",
		"charset-normalizer==3.4.2",
		"frozenlist==1.7.0",
		"h11==0.16.0",
		"idna==3.10",
		"multidict==6.5.0",
		"outcome==1.3.0.post0",
		"propcache==0.3.2",
		"pydub==0.25.1",
		"PySocks==1.7.1",
		"requests==2.31.0",
		"selenium==4.8.3",
		"selenium-recaptcha-solver==1.9.0",
		"sniffio==1.3.1",
		"sortedcontainers==2.4.0",
		"SpeechRecognition==3.8.1",
		"standard-aifc==3.13.0",
		"standard-chunk==3.13.0",
		"trio==0.30.0",
		"trio-websocket==0.12.2",
		"typing_extensions==4.13.2",
		"urllib3==1.26.20",
		"websocket-client==1.8.0",
		"wsproto==1.2.0",
		"yarl==1.20.1",
]

[project.scripts]
nhfd = "main:main"
